<resources>
    <string name="app_name">MoneyManager</string>
    <string name="mail_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="password_conf_hint">Подтвердите пароль</string>
    <string name="sign_in_title">Войти</string>
    <string name="sign_up_title">Зарегистрироваться</string>
    <string name="have_account">У меня уже есть аккаунт</string>
    <string name="error_title">Ошибка!</string>
    <string name="error_empty_field">Все поля должны быть заполнены!</string>
    <string name="error_conf_password">Пароли не совпадают!</string>
    <string name="error_incorrect_input">Некоторые поля заполнены неправильно!</string>
    <string name="ok">OK</string>
    <string name="menu_checks">Счета</string>
    <string name="menu_transactions">Операции</string>
    <string name="menu_analytics">Аналитика</string>
    <string name="menu_more">Еще</string>
    <string name="checks_title">КАРТЫ И СЧЕТА</string>
    <string name="debts_title">ДОЛГИ</string>
    <string name="amount_filler">000.00 ₽</string>
    <string name="no_debts">Нет долгов</string>
    <string name="no_checks">Нет счетов</string>
    <string name="check_name_filler">Счет</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="welcome_desc">Настройте свои счета и операции</string>
    <string name="cash_title_welcome">Счет наличных</string>
    <string name="card_title_welcome">Счет банковской карты</string>
    <string name="start_amount">Начальная сумма:</string>
    <string name="balance_title">Баланс:</string>
    <string name="card_type">Банк карты:</string>
    <string-array name="card_types">
        <item>Сбербанк</item>
        <item>Другой</item>
    </string-array>
    <string name="card_number">Последние 4 цифры\nномера карты</string>
    <string name="import_title">Импортировать операции из SMS (за последний месяц)</string>
    <string name="accept">Подтвердить</string>
    <string name="rub">₽</string>
    <string name="card_title">Карта</string>
    <string name="card_with_number">Карта %1$s</string>
    <string name="sber_card_title">Карта Сбербанка</string>
    <string name="sber_card_with_number">Сбербанк %1$s</string>
    <string name="cash_title">Наличные</string>
    <string name="amount">%1$.2f ₽</string>
    <string name="debt_name_toMe">%1$s -> Я</string>
    <string name="debt_name_fromMe">Я -> %1$s</string>
    <string name="debt_amount">%1$.2f ₽/%2$.2f ₽</string>
    <string name="signout_title">Выход</string>
    <string name="signout_desc">Выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="add_check_btn_title">Добавить карту или счет</string>
    <string name="add_debt_btn_title">Добавить долг</string>
    <string name="add_check_title">Добавление счета</string>
    <string name="add_debt_title">Добавление долга</string>
    <string name="check_name_hint">Название счета</string>
    <string name="check_type_hint">Тип счета</string>
    <string-array name="check_types">
        <item>Наличные</item>
        <item>Карта Сбербанка</item>
        <item>Карта другого банка</item>
    </string-array>
    <string name="check_number_hint">Последние четыре цифры номера карты (для импорта расходов)</string>
    <string name="check_import_title">Импорт транзакций из SMS</string>
    <string name="check_edit_btn_title">Сохранить</string>
    <string name="debt_type_hint">Тип долга</string>
    <string name="debt_amount_hint">Сумма долга (в рублях)</string>
    <string name="debt_person_hint">Отправитель/Получатель долга</string>
    <string name="debt_date_hint">Дата возвращения долга (необязательно)</string>
    <string-array name="debt_types">
        <item>Я должен</item>
        <item>Мне должны</item>
    </string-array>
    <string name="expense_amount">- %1$.2f ₽</string>
    <string name="income_amount">+ %1$.2f ₽</string>
    <string name="cat_food">Еда и рестораны</string>
    <string name="cat_fun">Развлечения</string>
    <string name="cat_products">Продукты</string>
    <string name="cat_purchases">Покупки</string>
    <string name="cat_transport">Проезд</string>
    <string name="cat_transfer">Переводы</string>
    <string name="cat_payment">Оплата услуг</string>
    <string name="cat_unknown">Без категории</string>
    <string name="date_today">Сегодня</string>
    <string name="date_yesterday">Вчера</string>
    <string name="check_stats_title">Статистика за текущий месяц</string>
    <string name="incomes_title">Доход</string>
    <string name="expenses_title">Расход</string>
    <string name="thread_title">Денежный поток</string>
    <string name="check_delete_title">Удаление счета</string>
    <string name="check_delete_desc">Вы уверены, что хотите удалить этот счет?</string>
</resources>