<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="30dp"
    tools:context=".activities.SignUpActivity">

    <include
        layout="@layout/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_vertical">

        <EditText
            android:id="@+id/field_mail_reg"
            android:inputType="textEmailAddress"
            android:hint="@string/mail_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_field"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <EditText
            android:id="@+id/field_password_reg"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_field"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <EditText
            android:id="@+id/field_password_conf_reg"
            android:inputType="textPassword"
            android:hint="@string/password_conf_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_field"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:background="@drawable/background_button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_to_sign_in"
            android:text="@string/have_account"
            android:textColor="@color/dark_blue"
            android:background="@drawable/background_button_alt"/>
    </LinearLayout>
</FrameLayout>