<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_desc"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <CheckBox
            android:id="@+id/checkbox_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_blue"
            android:text="@string/cash_title_welcome"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_amount"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_cash" />

        <EditText
            android:id="@+id/field_cash_start_amount"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/dark_blue"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textCursorDrawable="@drawable/cursor_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rub"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/field_cash_start_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <CheckBox
            android:id="@+id/checkbox_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_blue"
            android:text="@string/card_title_welcome"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/card_type"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/spinner_card_type"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_card" />

        <Spinner
            android:id="@+id/spinner_card_type"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/card_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/start_amount"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/field_card_start_amount"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/dark_blue"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/spinner_card_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rub"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView1"
            app:layout_constraintStart_toEndOf="@+id/field_card_start_amount" />

        <CheckBox
            android:id="@+id/checkbox_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:buttonTint="@color/dark_blue"
            android:text="@string/import_title"
            android:textSize="18sp"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_card" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_welcome_accept"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/background_button"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="130dp" />
</LinearLayout>