<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".activities.EditCheckActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_check_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/field_check_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:ems="10"
            android:hint="@string/check_name_hint"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_type_hint"
            android:layout_marginTop="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_check_name" />

        <Spinner
            android:id="@+id/spinner_check_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Spinner.DropDown"
            android:entries="@array/check_types"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/start_amount_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_amount"
            android:layout_marginTop="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_check_type" />

        <EditText
            android:id="@+id/field_start_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/dark_blue"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toEndOf="@+id/start_amount_hint"
            app:layout_constraintTop_toBottomOf="@+id/spinner_check_type" />

        <TextView
            android:id="@+id/check_number_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/check_number_hint"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/field_check_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_amount_hint" />

        <EditText
            android:id="@+id/field_check_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/dark_blue"
            android:ems="4"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/check_number_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/check_number_hint"
            app:layout_constraintTop_toTopOf="@+id/check_number_hint" />

        <CheckBox
            android:id="@+id/checkbox_check_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/check_import_title"
            android:textSize="16sp"
            android:buttonTint="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_number_hint" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>