<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/swipe_refresh_checks">

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragments.ChecksFragment"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checks_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_checks"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never"
                    android:nestedScrollingEnabled="false"/>

                <TextView
                    android:id="@+id/no_checks_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_checks"
                    android:visibility="invisible" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debts_title"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/debts_sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="end" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recycler_debts"
                    android:layout_marginTop="10dp"
                    android:overScrollMode="never"
                    android:nestedScrollingEnabled="false"/>

                <TextView
                    android:id="@+id/no_debts_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_debts"
                    android:visibility="invisible" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:background="@drawable/background_button_alt"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/btn_add_check">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/baseline_add_24"
                    app:tint="@color/dark_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_check_btn_title"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/background_button_alt"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/btn_add_debt">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:srcCompat="@drawable/baseline_add_24"
                    app:tint="@color/dark_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_debt_btn_title"
                    android:textColor="@color/dark_blue"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>